# platform

./: .gitignore  CMakeLists.txt  Makefile  bigfloat.go  bigfloat_test.go  bigint.go  bigint_test.go  cgo_prebuilt.go  cgo_source.go  cgo_source.go.in  go.mod  platform.go  platform_test.go  precision.go  precision_test.go
.github/workflows/: main.yml
benchmarks/: CMakeLists.txt  bench_main.c  bench_platform.c
cmake/: finkit-platformConfig.cmake.in
include/: error.h  fc_bigfloat.h  fc_bigint.h  fc_precision.h  mem_aligned.h  platform.h  simd_detect.h
scripts/: build.sh
src/: CMakeLists.txt  error.c  fc_bigfloat.c  fc_bigint.c  fc_bignum_init.c  fc_bignum_internal.h  fc_init.c  fc_precision.c  mem_aligned.c  platform_linux.c  platform_macos.c  platform_win.c  simd_detect.c
tests/: CMakeLists.txt  test_framework.c  test_main.c  test_platform.c
