#
# src/platform/CMakeLists.txt - Platform abstraction layer
#

# Platform abstraction layer sources
set(PLATFORM_SOURCES
    simd_detect.c
    mem_aligned.c
    error.c
    fc_init.c
)

# Platform-specific sources (selected by TARGET OS, not host OS)
# CMAKE_SYSTEM_NAME is set by the toolchain file and reflects the target platform
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    list(APPEND PLATFORM_SOURCES platform_win.c)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    list(APPEND PLATFORM_SOURCES platform_macos.c)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    list(APPEND PLATFORM_SOURCES platform_linux.c)
endif()

# Create platform object library
add_library(finkit_platform OBJECT ${PLATFORM_SOURCES})

target_compile_definitions(finkit_platform PRIVATE FC_STATIC_BUILD)

# Set include directories for this library
target_include_directories(finkit_platform
    PUBLIC
        ${CMAKE_SOURCE_DIR}/include
    PRIVATE
        ${CMAKE_BINARY_DIR}/include
)

# Apply common compiler flags
target_compile_options(finkit_platform PRIVATE -Wall -Wextra -Wpedantic -ffp-contract=off)

# Create static library from platform objects
add_library(finkit_platform_static STATIC $<TARGET_OBJECTS:finkit_platform>)
target_include_directories(finkit_platform_static
    PUBLIC
        ${CMAKE_SOURCE_DIR}/include
)

# Install platform headers (already in include/)
# No need to install - headers are already in the right place

# Alias for use in other parts of the project
add_library(finkit::platform ALIAS finkit_platform_static)
